# PPtYoda

./: .gitignore  README.md  config.ini.example  db.sqlite3  install.py  manage.py  pyproject.toml  pytest.ini  runserver.py
frontend/: package-lock.json  package.json
knowledge_base/: admin.py  models.py  urls.py  views.py
knowledge_base/tools/: chroma_driver.py
materials/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
materials/tools/: coze_launcher.py  doubao_fulltext_edit.js  doubao_helper.js  doubao_launcher.py  unlock_win_file.py  web_browser.py
ppt_killer/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
ppt_page/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
ppt_template/: admin.py  apps.py  models.py  urls.py  views.py
ppt_template/tools/: doc_handler.py  icons_handle.py  ppt_color_parse.py  ppt_generate.py  slide_data format.md  slide_data_format.md  slide_data_generate.py  template_parse.py
ppt_templates_files/: 橙色.pptx  蓝色.pptx  黑白.pptx
ppt_templates_files/1/: 橙色.pptx  蓝色.pptx  黑白.pptx
project_manage/: admin.py  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
project_template/: admin.py  apps.py  models.py  urls.py  views.py
prompts/: ai_helper.md  create_ppt_projects.md  create_ppt_projects_v1.md  generate_full_text_v1.md  generate_outline.md  generate_outline_v1.md  generate_related_files.md  generate_slide_data_system.md  generate_slide_data_system_v1.md  generate_slide_data_user.md
users/: admin.py  models.py  urls.py  views.py
(+40 files in other folders)
